<resources>
    <string name="app_name">EatHere</string>

    <string name="favorite">Favorite</string>
    <string name="map">Map</string>
    <string name="nerest">Nearest</string>
    <string name="menu">Menu</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">Location permission is required</string>
    <string name="action_favorite">Favorite</string>
    <string name="no_menu_found">Daily menu is not available</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="up">Up</string>
    <string name="title_activity_settings">Settings</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="radius">Location radius</string>
    <string name="enableGPS">Enable GPS</string>
    <string name="key_location">location</string>
    <string name="key_radius">radius</string>
    <string name="key_gps">gps</string>
    <string name="preference_file_key">pref_key</string>
    <string name="display_in_widget">Display in widget</string>
    <string name="widget_updated">Widget updated</string>
    <string name="location_error">Location not found</string>
    <string name="establishment_type">Establishment type</string>
    <string name="rating">Rating</string>
    <string name="price_range">Price range</string>
    <string name="address">Address</string>
    <string name="widget_error">Restaurant does not provide menu</string>
    <string name="empty_section">This section is empty</string>
    <string name="network_error">Network is not available</string>
    <string name="banner">Banner</string>
    <string name="logo">App logo</string>
    <string name="widget_icon">Widget icon</string>


</resources>
