<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nearest"
            android:icon="@drawable/ic_gps_fixed_black_24dp"
            android:title="@string/nerest"
            android:contentDescription="@string/nerest"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite"
            android:contentDescription="@string/favorite"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map"
            android:contentDescription="@string/map"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>